# develope-tool

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: architect.md  product-manager.md  senior-qa.md  staff-backend.md  staff-frontend.md  staff-fullstack.md  staff-infrastructure.md
.github/workflows/: build.yml
.smith/vault/ledger/: antipatterns.md  edge-cases.md  meta.yaml  patterns.md  project-quirks.md  tool-preferences.md
.specify/memory/: constitution.md
.specify/scripts/bash/: audit-pdf-generator.mjs  check-prerequisites.sh  clear-active-workflow.sh  get-base-branch.sh  update-agent-context.sh
.specify/systems/system-01-frontend-ui/: spec.md
.specify/systems/system-01-frontend-ui/features/002-disk-analyzer-spacesniffer/: data-model.md  plan.md  (+4 more)
.specify/systems/system-02-tauri-backend/: spec.md
.specify/systems/system-03-migration/: spec.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  system-spec-template.md  tasks-template.md
specs/: init-intake.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/tools/: layout.tsx  page.tsx
src/app/tools/archive/: page.tsx
src/app/tools/disk-heatmap/: page.tsx
src/app/tools/system/: page.tsx
src/app/tools/tool-data-migrate/: page.tsx
src/app/tools/windows-migrate/: page.tsx
src/components/: recent-tools.tsx
src/lib/: tauri.ts  tools.ts
(+11 files in other folders)
