[package]
name = "devetool"
version = "0.1.0"
description = "Desktop development toolkit"
authors = ["you"]
edition = "2021"

[lib]
name = "devetool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bzip2 = "0.5"
flate2 = "1"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tar = "0.4"
walkdir = "2"
xz2 = "0.1"
zip = { version = "0.6", default-features = true }
